// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageBox and in error renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.60)",
        "borderRadius": 5,
        "borderWidth": 2,
        "marginVertical": 20,
        "padding": 20,
      },
      Object {
        "borderColor": "rgb(208, 2, 27)",
      },
    ]
  }
>
  <Text>
    PANIC!
  </Text>
</View>
`;

exports[`MessageBox when passive renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.60)",
        "borderRadius": 5,
        "borderWidth": 2,
        "marginVertical": 20,
        "padding": 20,
      },
      Object {
        "borderColor": "rgb(45, 82, 113)",
      },
    ]
  }
>
  <Text>
    Everything OK
  </Text>
</View>
`;

exports[`MessageBox when warning renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgba(255, 255, 255, 0.60)",
        "borderRadius": 5,
        "borderWidth": 2,
        "marginVertical": 20,
        "padding": 20,
      },
      Object {
        "borderColor": "orange",
      },
    ]
  }
>
  <Text>
    Are you sure?
  </Text>
</View>
`;
